<resources>
    <string name="app_name">Afroshop Module 1</string>
    <string name="se_connecter_avec">Se connecter avec</string>
    <string name="ou">Ou</string>
    <string name="pseudo">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="inscription">Inscription</string>
    <string name="utiliser_un_compte_existant">Utiliser un compte existant</string>
    <string name="cr_er_un_compte_afro_shop">Créer un compte Afro-Shop</string>
    <string name="nom">Nom*</string>
    <string name="prenom">Prénom*</string>
    <string name="email">Email*</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone*</string>
    <string name="date_de_naissance">Date de Naissance*</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="en_vous_inscivant_vous_acceptez_de_respecter">En vous inscivant vous acceptez</string>
    <string name="nos_termes_et_contions_d_utilisation">nos termes et contions d\'utilisation</string>
    <string name="d_j_un_compte">Déjà un compte ?</string>
    <string name="champs_obligatoires">* Champs Obligatoires</string>
    <string name="logo">Logo</string>
    <string name="twitter_account">Twitter Account</string>
    <string name="google_account">Google Account</string>
    <string name="linked_account">Linked Account</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="afro">AFRO</string>
    <string name="shop">SHOP</string>
    <string name="afroshop">Afroshop</string>
    <string name="commencer">Commencer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ville">Ville*</string>
    <string name="localit">Localité*</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="mot_de_passe0">Mot de passe*</string>
    <string name="erreur_confirm_password">Les mots de passe que vous avez entre ne correspondent pas</string>
    <string name="extreme_nord">Extreme-nord</string>
    <string name="nord">Nord</string>
    <string name="adamaoua">Adamaoua</string>
    <string name="centre">Centre</string>
    <string name="est">Est</string>
    <string name="nord_ouest">Nord-Ouest</string>
    <string name="ouest">Ouest</string>
    <string name="sud_ouest">Sud-Ouest</string>
    <string name="littoral">Littoral</string>
    <string name="sud">Sud</string>
    <string name="pays_cameroun">Cameroun</string>
    <string name="erreur_champ_non_remplis">Veuillez remplir tous les champs</string>
    <string name="message_deja_logger">Vous avez déjà été logger.</string>
    <string name="erreur_convertion">Erreur de convertion JSON</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations"> Modifier votre compte (vos information personnelle ) ici
    </string>
    <string name="pref_title_compte"> Mon Compte</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_listes_">Listes des Agents</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"> Inscrire </string>
    <string name="no_regiter_text"> Inscription </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">Inscription</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inscriptions">Inscription</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinner_title">
       <item>Employe</item>
       <item>Employeur</item>
   </string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_commande_">Mes Commandes</string>
    <string name="quantite">Quantite</string>
    <string name="libelle">Libelle</string>
    <string name="prix_unitaire">Prix unitaire</string>
</resources>