<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsafack.tkswif.afroshop.gestionDesCommandes.suiviDesCommandes.activities.CardActivity">

    <TextView
        android:id="@+id/addproducttocard_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="Panier"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8000"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_below="@+id/addproducttocard_title"/>

    <android.support.v7.widget.CardView
        android:id="@+id/addproducttocard_libelle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view1"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:text="@string/quantite"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:text="@string/libelle"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/prix_unitaire"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/quantite"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:id="@+id/view2"
        android:layout_height="1dp"
        android:background="@color/colorOrange"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/addproducttocard_libelle"/>

    <ListView
        android:id="@+id/addproducttocard_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/view2"
        android:layout_marginBottom="75dp"/>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addproducttocard_commander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:src="@drawable/commande"
        app:fabSize="normal"
        app:backgroundTint="@color/colorAzure" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/addproducttocard_commander"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorAzure"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">
        <TextView
            android:id="@+id/addproducttocard_prixtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="17sp"
            android:text=" prix total de la commande 100000000 XAF"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>
